--- a/index.html
+++ b/index.html
@@ -65,7 +65,12 @@
 			  <ol class="carousel-indicators">
 			    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
 			    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-			    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+			    <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+			    <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+			    <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
+			    <li data-target="#carouselExampleIndicators" data-slide-to="6"></li>
+			    <li data-target="#carouselExampleIndicators" data-slide-to="7"></li>
+			    <li data-target="#carouselExampleIndicators" data-slide-to="8"></li>
 			  </ol>
 			  <div class="carousel-inner">
 			    <!-- <div class="carousel-item active">
@@ -102,6 +107,14 @@
 
 				<div class="carousel-item ">
 			      <img class="w-100" src="img/6.jpg">			     
+			    </div>
+
+			    <div class="carousel-item ">
+			      <img class="w-100" src="img/7.jpg">			     
+			    </div>
+
+			    <div class="carousel-item ">
+			      <img class="w-100" src="img/8.jpg">			     
 			    </div>
 
 			    <!-- <div class="carousel-item active ">
@@ -276,23 +289,58 @@
 				<!-- Quick Facts -->
 				<div class="bg-light mt-3">
 					<h6 class="p-2 bg-dark text-white text-center mb-0">Quick Facts</h6>
-					<div id="facts">
-						<div class="p-5 text-center" style="display: none;">
-							<h5>Land Area</h5>
-							<h6>10,733 hectares</h6>
+					<div class="bg-dark text-white" id="facts">
+						<div class="p-5 text-center show">
+							<h6>Land Area</h6>
+							<h4>10,733 hectares</h4>
 						</div>
 						<div class="p-5 text-center" style="display: none;">
-							<h5>Population</h5>
-							<h6>15,109</h6>
+							<h6>Population</h6>
+							<h4>15,109</h4>
 						</div>
 						<div class="p-5 text-center" style="display: none;">
-							<h5>Number of Barangays</h5>
-							<h6>10 barangays</h6>
+							<h6>Number of Barangays</h6>
+							<h4>10 barangays</h4>
 						</div>
-						<div class="p-5 text-center show" style="">
-							<h5>Classification</h5>
-							<h6>5th class</h6>
+						<div class="p-5 text-center" style="display: none;">
+							<h6>Classification</h6>
+							<h4>5th class</h4>
 						</div>
+						<div class="p-5 text-center" style="display: none;">
+							<h6>Fiestas and Festivals</h6>
+							<ul class="list-group list-group-flush">
+								<li class="list-group-item">Foundation Day/Bagulin Day (June 25)</li>
+								<li class="list-group-item">Boyboy Festival (March), Pudit (March)</li>
+								<li class="list-group-item">Patronal Fiesta (St. Joseph Parish) March 19</li>
+								<li class="list-group-item">Cambaly Day (February 21)</li>
+							</ul>
+						</div>
+						<div class="p-5 text-center" style="display: none;">
+							<h6>Tourist Attractions</h6>
+							<ul class="list-group list-group-flush">
+								<li class="list-group-item">Kudlap Cave (Burial Cave)</li>
+								<li class="list-group-item">Bulalakaw Falls</li>
+								<li class="list-group-item">People"s Park (Kudal Park)</li>
+								<li class="list-group-item">Tili Nuang Falls</li>
+								<li class="list-group-item">Nakapandagan Falls</li>
+								<li class="list-group-item">Bagulin Hanging</li> 
+								<li class="list-group-item">Footbridge</li>
+								<li class="list-group-item">Loslosi Falls</li>
+							</ul>
+						</div>
+						<div class="p-5 text-center" style="display: none;">
+							<h6>Products</h6>
+							<p>
+							  Rice, Softbrooms, Fresh water fish, corn,
+							  vegetables, livestock, fruits (banana, 
+							  rambutan, lansones,)
+							</p>
+						</div>
+						<div class="p-5 text-center" style="display: none;">
+							<h6>Market day</h6>
+							<h5>Fridays</h5>
+						</div>
+
 					</div>
 				</div>
 			</div>
@@ -311,28 +359,17 @@
 		setInterval(function() {
 			index = $('#facts').find('.show').index();
 
-			$('#facts .show').fadeOut(function() {
-				$('#facts div').eq( (index + 1) % $('#facts>div').length ).fadeIn().addClass('show');
-			}).removeClass('show');
-			
-		}, 3000);
-	});
-</script>
+			if ( $('#facts>div').length-1 == index) {
+				index = 0;
+			}
+			else {
+				index+=1;
+			}
 
-</body>
-
-<script type="text/javascript" src="js/jquery.js"></script>
-<script type="text/javascript" src="js/bootstrap.js"></script>
-<script type="text/javascript">
-	$('#bagulin,#launion').click(function(){
-		$('audio').trigger('pause');
-	});
-	$('#facts').ready(function() {
-		setInterval(function() {
-			index = $('#facts').find('.show').index();
+			console.log(index);
 
 			$('#facts .show').fadeOut(function() {
-				$('#facts div').eq( (index + 1) % $('#facts>div').length ).fadeIn().addClass('show');
+				$('#facts div').eq(index).fadeIn().addClass('show');
 			}).removeClass('show');
 			
 		}, 3000);
